// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index require-module-exports basic 1`] = `
{
  "a": 1,
}
`;

exports[`index require-module-exports basic 2`] = `
{
  "age": 20,
  "b": "/abc/a.js",
  "name": "b",
  "say": [Function],
}
`;

exports[`index require-module-exports basic export names cjs 1`] = `
{
  "bar": "bar",
  "foo": "foo",
}
`;

exports[`index require-module-exports basic export names cjs 2`] = `
{
  "bar": "bar",
  "baz": "baz",
  "foo": "foo",
}
`;

exports[`index require-module-exports basic export names esm 1`] = `
{
  "bar": "bar",
  "foo": "foo",
}
`;
